Fix card text z-index

--- a/resources/sass/common.scss
+++ b/resources/sass/common.scss
@@ -1144,7 +1144,7 @@
   }
 
   .content-cards {
-      z-index: 9;
+      z-index: 11;
       font-size: 0.95em;
       position: absolute;
       top: 238px;
